clean up JavaCombiner